using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Hero : BattleObject
{
    public int expToNextLevel;

    // Start is called before the first frame update
    void Start()
    {
        
    }

    // Update is called once per frame
    void Update()
    {
        
    }

    public void UpdateResult()
    {

    }

    public void LevelUp()
    { 

    }
}
